--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,8 @@
 }
 
 body {
-  background: linear-gradient(135deg, #7a109e, #3939ffa9, #7a109e);
+  background: gray;
+}
+a {
+  text-decoration: none;
 }
