--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-body {
-  background: gray;
-}
+// body {
+//   // background: gray;
+// }
 a {
   text-decoration: none;
 }
