--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 * {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 // body {
@@ -14,5 +15,6 @@ a {
 .container {
   max-width: 1280px;
   width: 90%;
+  height: 100%;
   margin: 0 auto;
 }
