--- a/src/components/Me/children/cotegory/cotegory.module.scss
+++ b/src/components/Me/children/cotegory/cotegory.module.scss
@@ -90,4 +90,33 @@
       }
     }
   }
+
+  .item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    border: 1px solid rgb(140 140 140);
+    border-radius: 0.25rem;
+    background: rgb(255 255 255 / 10%);
+
+    img {
+      max-height: 30rem;
+    }
+
+    h3 {
+      padding: 0.5rem;
+    }
+
+    p {
+      padding: 0.5rem;
+    }
+
+    button {
+      padding: 0.25rem 0.5rem;
+      font-size: 1rem;
+      border-radius: 0.25rem;
+      border: 1px solid rgb(217, 217, 217);
+    }
+  }
 }
