--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,6 @@
   box-sizing: border-box;
 }
 
-// body {
-//   // background: gray;
-// }
 a {
   text-decoration: none;
 }
@@ -15,4 +12,8 @@ a {
   max-width: 1280px;
   width: 90%;
   margin: 0 auto;
+}
+
+body {
+  background: #c8c7c7;
 }
